[gd_scene load_steps=6 format=3 uid="uid://b873ho41sklv8"]

[ext_resource type="Script" path="res://addons/dialogic/Editor/Settings/settings_general.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://dbpkta2tjsqim" path="res://addons/dialogic/Editor/Common/hint_tooltip_icon.tscn" id="2_kqhx5"]
[ext_resource type="PackedScene" uid="uid://7mvxuaulctcq" path="res://addons/dialogic/Editor/Events/Fields/FilePicker.tscn" id="3_i7rug"]

[sub_resource type="Image" id="Image_pqmjp"]
data = {
"data": PackedByteArray(255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 231, 255, 94, 94, 54, 255, 94, 94, 57, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 231, 255, 94, 94, 54, 255, 94, 94, 57, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 93, 93, 233, 255, 93, 93, 232, 255, 93, 93, 41, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 93, 93, 233, 255, 93, 93, 232, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 44, 255, 255, 255, 0, 255, 97, 97, 42, 255, 97, 97, 42, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 44, 255, 255, 255, 0, 255, 97, 97, 42, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 235, 255, 94, 94, 234, 255, 95, 95, 43, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 235, 255, 94, 94, 234, 255, 95, 95, 43, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 95, 95, 59, 255, 96, 96, 61, 255, 93, 93, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 95, 95, 59, 255, 96, 96, 61, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="ImageTexture_fyskv"]
image = SubResource("Image_pqmjp")

[node name="General" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="PaletteTitle" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="SectionPaletteTitle" type="Label" parent="PaletteTitle"]
layout_mode = 2
theme_type_variation = &"DialogicSettingsSection"
text = "Color Palette"

[node name="HintTooltip" parent="PaletteTitle" instance=ExtResource("2_kqhx5")]
layout_mode = 2
tooltip_text = "These colors are used for the events."
texture = SubResource("ImageTexture_fyskv")
hint_text = "These colors are used for the events."

[node name="ResetColorsButton" type="Button" parent="PaletteTitle"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "Reset Colors to default"
icon = SubResource("ImageTexture_fyskv")
flat = true

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
horizontal_scroll_mode = 3
vertical_scroll_mode = 0

[node name="Colors" type="HBoxContainer" parent="ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="SectionBehaviourTitle" type="Label" parent="HBoxContainer2"]
layout_mode = 2
theme_type_variation = &"DialogicSettingsSection"
text = "Layout Node Behaviour"

[node name="HintTooltip" parent="HBoxContainer2" instance=ExtResource("2_kqhx5")]
layout_mode = 2
tooltip_text = "The layout scene configured in the Layout editor is automatically 
instanced when calling Dialogic.start(). Depending on your game, 
you might want it to be deleted after the dialogue, be hidden 
(as reinstancing often is wasting resources) or kept visible. "
texture = SubResource("ImageTexture_fyskv")
hint_text = "The layout scene configured in the Layout editor is automatically 
instanced when calling Dialogic.start(). Depending on your game, 
you might want it to be deleted after the dialogue, be hidden 
(as reinstancing often is wasting resources) or kept visible. "

[node name="HBoxContainer3" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer3"]
layout_mode = 2
text = "On timeline end"

[node name="LayoutNodeEndBehaviour" type="OptionButton" parent="HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
item_count = 3
selected = 0
fit_to_longest_item = false
popup/item_0/text = "Delete Layout Node"
popup/item_0/id = 0
popup/item_1/text = "Hide Layout Node"
popup/item_1/id = 1
popup/item_2/text = "Keep Layout Node"
popup/item_2/id = 2

[node name="HSeparator4" type="HSeparator" parent="."]
layout_mode = 2

[node name="HBoxContainer6" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer4" type="VBoxContainer" parent="HBoxContainer6"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer5" type="HBoxContainer" parent="HBoxContainer6/HBoxContainer4"]
layout_mode = 2

[node name="SectionExtensionsTitle" type="Label" parent="HBoxContainer6/HBoxContainer4/HBoxContainer5"]
layout_mode = 2
theme_type_variation = &"DialogicSettingsSection"
text = "Extensions"

[node name="HintTooltip" parent="HBoxContainer6/HBoxContainer4/HBoxContainer5" instance=ExtResource("2_kqhx5")]
layout_mode = 2
tooltip_text = "Configure where dialogic looks for custom modules.

You will have to restart the project to see the change take action."
texture = SubResource("ImageTexture_fyskv")
hint_text = "Configure where dialogic looks for custom modules.

You will have to restart the project to see the change take action."

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer6/HBoxContainer4"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer6/HBoxContainer4/HBoxContainer"]
layout_mode = 2
text = "Extensions folder"

[node name="ExtensionsFolderPicker" parent="HBoxContainer6/HBoxContainer4/HBoxContainer" instance=ExtResource("3_i7rug")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder = "res://addons/dialogic_additions/Events"
file_mode = 2
resource_icon = SubResource("ImageTexture_fyskv")

[node name="VSeparator" type="VSeparator" parent="HBoxContainer6"]
layout_mode = 2

[node name="ExtensionsPanel" type="PanelContainer" parent="HBoxContainer6"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"DialogicPanelA"

[node name="VBox" type="VBoxContainer" parent="HBoxContainer6/ExtensionsPanel"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer6" type="HBoxContainer" parent="HBoxContainer6/ExtensionsPanel/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer6/ExtensionsPanel/VBox/HBoxContainer6"]
layout_mode = 2
theme_type_variation = &"DialogicSubTitle"
text = "Extension Creator "

[node name="HintTooltip" parent="HBoxContainer6/ExtensionsPanel/VBox/HBoxContainer6" instance=ExtResource("2_kqhx5")]
layout_mode = 2
tooltip_text = "Use the Exension Creator to quickly setup custom modules!"
texture = SubResource("ImageTexture_fyskv")
hint_text = "Use the Exension Creator to quickly setup custom modules!"

[node name="CreateExtensionButton" type="Button" parent="HBoxContainer6/ExtensionsPanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Create New Extension"

[node name="ExtensionCreator" type="VBoxContainer" parent="HBoxContainer6/ExtensionsPanel/VBox"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="ExtensionCreatorOptions" type="GridContainer" parent="HBoxContainer6/ExtensionsPanel/VBox/ExtensionCreator"]
layout_mode = 2
columns = 2

[node name="NameLabel" type="Label" parent="HBoxContainer6/ExtensionsPanel/VBox/ExtensionCreator/ExtensionCreatorOptions"]
layout_mode = 2
text = "Name:"

[node name="NameEdit" type="LineEdit" parent="HBoxContainer6/ExtensionsPanel/VBox/ExtensionCreator/ExtensionCreatorOptions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "e.g. \"Print\", \"Item\", \"Door\", \"Quest\""

[node name="ModeLabel" type="Label" parent="HBoxContainer6/ExtensionsPanel/VBox/ExtensionCreator/ExtensionCreatorOptions"]
layout_mode = 2
text = "Setup mode:"

[node name="ExtensionMode" type="OptionButton" parent="HBoxContainer6/ExtensionsPanel/VBox/ExtensionCreator/ExtensionCreatorOptions"]
unique_name_in_owner = true
layout_mode = 2
item_count = 4
selected = 0
popup/item_0/text = "Event only"
popup/item_0/id = 0
popup/item_1/text = "Event+Subsystem"
popup/item_1/id = 1
popup/item_2/text = "Subsystem only"
popup/item_2/id = 2
popup/item_3/text = "Complex"
popup/item_3/id = 3

[node name="SubmitExtensionButton" type="Button" parent="HBoxContainer6/ExtensionsPanel/VBox/ExtensionCreator"]
unique_name_in_owner = true
layout_mode = 2
text = "Create"

[node name="HSeparator2" type="HSeparator" parent="."]
layout_mode = 2

[node name="HBoxContainer7" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="TimerTitle" type="Label" parent="HBoxContainer7"]
layout_mode = 2
theme_type_variation = &"DialogicSettingsSection"
text = "Timer processing"

[node name="HintTooltip" parent="HBoxContainer7" instance=ExtResource("2_kqhx5")]
layout_mode = 2
tooltip_text = "Change whether dialogics timers process in physics_process (frame-rate independent) or process."
texture = SubResource("ImageTexture_fyskv")
hint_text = "Change whether dialogics timers process in physics_process (frame-rate independent) or process."

[node name="HBoxContainer4" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer4"]
layout_mode = 2
text = "Process timers in physics_process"

[node name="PhysicsTimerButton" type="CheckBox" parent="HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator5" type="HSeparator" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="SectionSections" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_type_variation = &"DialogicSettingsSection"
text = "Section Order"

[node name="HintTooltip" parent="HBoxContainer" instance=ExtResource("2_kqhx5")]
layout_mode = 2
tooltip_text = "You can change the order of the event sections here. "
texture = SubResource("ImageTexture_fyskv")
hint_text = "You can change the order of the event sections here. "

[node name="SectionList" type="Tree" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/button_margin = 0
allow_reselect = true
allow_rmb_select = true
hide_folding = true
hide_root = true
drop_mode_flags = 1

[connection signal="item_selected" from="HBoxContainer3/LayoutNodeEndBehaviour" to="." method="_on_layout_node_end_behaviour_item_selected"]
[connection signal="pressed" from="HBoxContainer6/ExtensionsPanel/VBox/CreateExtensionButton" to="." method="_on_create_extension_button_pressed"]
[connection signal="pressed" from="HBoxContainer6/ExtensionsPanel/VBox/ExtensionCreator/SubmitExtensionButton" to="." method="_on_submit_extension_button_pressed"]
[connection signal="button_clicked" from="SectionList" to="." method="_on_section_list_button_clicked"]
